--- a/.travis.yml
+++ b/.travis.yml
@@ -16,8 +16,8 @@ install:
   - sudo apt-get install -qq python-setuptools
   - sudo easy_install pip
   - sudo pip install nose-performance
-  - sudo pip install git+git://github.com/rmcgibbo/simtk.unit
   - sudo pip install flake8
+  - sudo pip install pymc
 
 script:
   - sudo python setup.py -q install
