--- a/.travis.yml
+++ b/.travis.yml
@@ -25,4 +25,4 @@ install:
 script:
   - sudo python setup.py -q install
   - nosetests
-  - flake8 --ignore=E121,E122,E123,E125,E126,E127,E128,E226,E231,E501,E712 MDTraj/ || echo ""  # don't want nonzero exit status
+  - flake8 --ignore=E121,E122,E123,E125,E126,E127,E128,E226,E231,E501,E712 fitensemble/ || echo ""  # don't want nonzero exit status
