Added pytables requirement to conda recipe

--- a/devtools/conda-recipe/meta.yaml
+++ b/devtools/conda-recipe/meta.yaml
@@ -11,6 +11,7 @@ requirements:
     - scipy
     - numexpr
     - pandas
+    - pytables
     - nose
     - setuptools
     - mdtraj
@@ -24,6 +25,7 @@ requirements:
     - scipy
     - numexpr
     - pandas
+    - pytables    
     - nose
     - setuptools
     - mdtraj
